[package]
name = "cvesearch"
version = "0.1.1"
authors = ["Flavio Oliveira <rusty@wisespace.io>"]
description = "Provides a client library for the CIRCL CVE Search"
license = "MIT OR Apache-2.0"
keywords = ["CVE", "Vulnerabilities", "CIRCL"]

repository = "https://github.com/wisespace-io/cve-search"
readme = "README.md"

[lib]
name = "cvesearch"
path = "src/lib.rs"

[dependencies]
hyper = "0.9"
serde_json = "0.8"
